#168 alignment issue fixed for filter page

--- a/core/static/css/v2/search_filters.less
+++ b/core/static/css/v2/search_filters.less
@@ -19,9 +19,9 @@
 
   .gallery-title{
     margin-bottom: 35px;
-    margin-top: 20px;
+    margin-top: 40px;
     .gallery-title-icon {
-      padding-top: 5px;
+      padding-top: 10px;
     }
   }
   .search-result-panel .search-panel .container{
